--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -91,7 +91,8 @@
     "loading": "Загрузка опыта...",
     "untitled": "Без названия",
     "unknownCompany": "Неизвестная компания",
-    "noDescription": "Описание отсутствует."
+    "noDescription": "Описание отсутствует.",
+    "present": "Настоящее время"
   },
   "projects": {
     "loading": "Загрузка проектов...",
@@ -99,7 +100,8 @@
     "title": "Избранные проекты",
     "liveDemo": "Демо версия",
     "github": "Гитхаб",
-    "techStack": "Технологический стек"
+    "techStack": "Технологический стек",
+    "imageNotFound": "Изображение не найдено"
   },
   "contactSection": {
     "loading": "Загрузка...",
@@ -119,8 +121,31 @@
     "reset": "Сбросить"
   },
   "toast": {
+    "__unused": true,
     "success": "✅ Успешно!",
     "error": "❌ Что-то пошло не так"
+  },
+  "projectForm": {
+    "fields": {
+      "title": "Название",
+      "description": "Описание",
+      "techStack": "Технологический стек",
+      "github": "URL Гитхаб",
+      "live": "URL демо версии"
+    },
+    "uploadLabel": "Изображение проекта",
+    "dropHere": "Перетащите файлы сюда...",
+    "dragHere": "Перетащите изображение сюда или кликните для выбора",
+    "cancel": "Отмена",
+    "submit": "Отправить",
+    "submitting": "Отправка...",
+    "previewAlt": "Предпросмотр изображения",
+    "previewFullAlt": "Полноразмерный предпросмотр",
+    "errors": {
+      "title": "Название обязательно",
+      "github": "Недействительный URL Гитхаб",
+      "live": "Недействительный URL демо версии"
+    }
   },
   "admin": {
     "projects": {
@@ -154,6 +179,9 @@
       "namePlaceholder": "например, React",
       "iconPlaceholder": "Выберите иконку...",
       "levelPlaceholder": "например, B2",
+      "errors": {
+        "name": "Название обязательно"
+      },
       "table": {
         "skill": "Навык",
         "category": "Категория",
@@ -181,6 +209,12 @@
         "end": "Дата окончания (или оставьте пустым)",
         "icon": "Введите название иконки (например, FaBriefcase)",
         "description": "Описание"
+      },
+      "errors": {
+        "title": "Название обязательно",
+        "company": "Компания обязательна",
+        "description": "Описание обязательно",
+        "startDate": "Дата начала обязательна"
       }
     },
     "hero": {
@@ -193,6 +227,11 @@
       "name": "Имя",
       "tagline": "Слоган",
       "technologies": "Технологии (через запятую)",
+      "errors": {
+        "name": "Имя обязательно",
+        "tagline": "Слоган обязателен",
+        "technologies": "Технологии обязательны"
+      },
       "confirmDelete": "⚠️ Удалить эту главную?",
       "delete": "🗑️ Удалить главную",
       "toast": {
@@ -224,6 +263,18 @@
         "telegram": "https://t.me/ваш-логин",
         "linkedin": "https://linkedin.com/in/ваш-логин"
       },
+      "errors": {
+        "phone": "Телефон обязателен",
+        "invalidEmail": "Недействительный email",
+        "email": "Электронная почта обязательна",
+        "location": "Адрес обязателен",
+        "githubUrl": "Недействительный URL Гитхаб",
+        "github": "Гитхаб обязателен",
+        "telegramUrl": "Недействительный URL Телеграм",
+        "telegram": "Телеграм обязателен",
+        "linkedinUrl": "Недействительный URL Линкедин",
+        "linkedin": "Линкедин обязателен"
+      },
       "reset": "🧹 Сбросить до последнего сохраненного",
       "confirmDelete": "Вы уверены, что хотите удалить контактную информацию?",
       "toast": {
@@ -239,6 +290,10 @@
   },
   "protected": {
     "checking": "Проверка доступа..."
+  },
+  "iconPicker": {
+    "placeholder": "Введите название иконки (например, FaNodeJs)",
+    "noMatches": "Совпадений не найдено"
   },
   "languages": {
     "en": "Английский",
