--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -20,56 +20,56 @@
       "manageTitle": "管理",
       "previewTitle": "预览"
     },
-    "logout": "退出登录"
+    "logout": "退出"
   },
   "footer": {
-    "copy": "© {{year}} {{name}}。保留所有权利。"
+    "copy": "© {{year}} {{name}}. 保留所有权利。"
   },
   "themeToggle": {
     "aria": "切换主题"
   },
   "contactForm": {
     "fullName": "全名",
-    "email": "电子邮箱",
-    "message": "留言",
-    "send": "发送留言",
+    "email": "电子邮件地址",
+    "message": "消息",
+    "send": "发送消息",
     "sending": "发送中...",
     "toast": {
-      "success": "📨 留言发送成功！",
-      "error": "❌ 留言发送失败"
+      "success": "📨 消息发送成功！",
+      "error": "❌ 消息发送失败"
     },
     "errors": {
-      "fullName": "全名为必填项",
-      "email": "邮箱为必填项",
-      "message": "留言内容为必填项"
+      "fullName": "必须填写全名",
+      "email": "必须填写电子邮件",
+      "message": "必须填写消息"
     }
   },
   "login": {
     "success": "✅ 登录成功！",
-    "error": "❌ 登录失败。请检查凭据。",
+    "error": "❌ 登录失败。请检查您的凭据。",
     "title": "管理员登录",
-    "email": "邮箱",
+    "email": "电子邮件",
     "password": "密码",
     "errors": {
-      "email": "邮箱为必填项",
-      "password": "密码为必填项"
+      "email": "必须填写电子邮件",
+      "password": "必须填写密码"
     },
     "loading": "登录中...",
     "submit": "登录"
   },
   "contactPage": {
     "phone": "电话",
-    "email": "电子邮箱",
-    "location": "地址",
+    "email": "电子邮件",
+    "location": "位置",
     "telegram": "Telegram",
     "github": "GitHub",
     "linkedin": "LinkedIn",
-    "title": "取得联系 📨",
-    "subtitle": "我始终乐于探讨新项目、创意想法或合作机会。",
+    "title": "联系我 📨",
+    "subtitle": "我始终乐于讨论新项目、创意或机会。",
     "details": "联系详情",
     "collapseAll": "全部折叠",
     "expandAll": "全部展开",
-    "loading": "正在加载联系信息...",
+    "loading": "加载联系信息中...",
     "failed": "无法加载联系信息。"
   },
   "hero": {
@@ -80,37 +80,39 @@
     "title": "关于我"
   },
   "skills": {
-    "title": "我的技术栈",
+    "title": "我的技术储备",
     "loading": "加载技能中...",
     "hard": "硬技能",
     "soft": "软技能",
     "languages": "语言"
   },
   "experience": {
-    "title": "职业 & 教育经历",
-    "loading": "加载经历中...",
+    "title": "职业与教育",
+    "loading": "加载经验中...",
     "untitled": "无标题",
     "unknownCompany": "未知公司",
-    "noDescription": "未提供描述。"
+    "noDescription": "未提供描述。",
+    "present": "现在"
   },
   "projects": {
     "loading": "加载项目中...",
-    "error": "加载项目失败。",
+    "error": "无法加载项目。",
     "title": "精选项目",
     "liveDemo": "在线演示",
-    "github": "GitHub"
+    "github": "GitHub",
+    "techStack": "技术栈",
+    "imageNotFound": "图像未找到"
   },
   "contactSection": {
     "loading": "加载中...",
     "title": "📬 联系我",
     "information": "联系信息",
-    "description": "我愿意参与有意义的合作与令人兴奋的后端机会。让我们一起创造影响力！",
-    "techStack": "技术栈"
+    "description": "我乐于参与有意义的合作和激动人心的后台开发机会。让我们一起打造有影响力的东西吧！"
   },
   "form": {
     "save": "保存",
     "saveChanges": "保存更改",
-    "saving": "正在保存...",
+    "saving": "保存中...",
     "cancel": "取消",
     "delete": "删除",
     "create": "创建",
@@ -119,8 +121,31 @@
     "reset": "重置"
   },
   "toast": {
+    "__unused": true,
     "success": "✅ 成功！",
     "error": "❌ 出现错误"
+  },
+  "projectForm": {
+    "fields": {
+      "title": "标题",
+      "description": "描述",
+      "techStack": "技术栈",
+      "github": "GitHub URL",
+      "live": "在线演示 URL"
+    },
+    "uploadLabel": "项目图片",
+    "dropHere": "将文件拖放到此处...",
+    "dragHere": "将图片拖放到此处或点击选择",
+    "cancel": "取消",
+    "submit": "提交",
+    "submitting": "提交中...",
+    "previewAlt": "图片预览",
+    "previewFullAlt": "全尺寸预览",
+    "errors": {
+      "title": "必须填写标题",
+      "github": "无效的 GitHub URL",
+      "live": "无效的在线演示 URL"
+    }
   },
   "admin": {
     "projects": {
@@ -128,12 +153,12 @@
       "add": "➕ 添加项目",
       "edit": "✏️ 编辑项目",
       "new": "🆕 新项目",
-      "loading": "正在加载项目...",
-      "error": "❌ 加载项目失败。",
+      "loading": "加载项目中...",
+      "error": "❌ 无法加载项目。",
       "empty": "暂无项目。",
-      "imageNotFound": "未找到图像",
-      "noDescription": "暂无描述。",
-      "confirmDelete": "🗑️ 确定要删除此项目？",
+      "imageNotFound": "图片未找到",
+      "noDescription": "无描述。",
+      "confirmDelete": "🗑️ 删除此项目？",
       "toast": {
         "created": "✅ 项目已创建！",
         "createError": "❌ 创建失败",
@@ -150,18 +175,21 @@
       "category": "类别",
       "name": "名称",
       "icon": "图标",
-      "level": "等级",
-      "namePlaceholder": "例如：React",
+      "level": "级别",
+      "namePlaceholder": "例如 React",
       "iconPlaceholder": "选择一个图标...",
-      "levelPlaceholder": "例如：B2",
+      "levelPlaceholder": "例如 B2",
+      "errors": {
+        "name": "必须填写名称"
+      },
       "table": {
         "skill": "技能",
         "category": "类别",
-        "level": "等级",
+        "level": "级别",
         "actions": "操作"
       },
       "loading": "加载中...",
-      "confirmDelete": "确定要删除此技能？",
+      "confirmDelete": "您确定要删除此技能吗？",
       "toast": {
         "created": "技能创建成功！",
         "createError": "创建技能失败",
@@ -172,73 +200,100 @@
       }
     },
     "experience": {
-      "title": "管理经历",
-      "present": "至今",
+      "title": "管理经验",
+      "present": "现在",
       "placeholders": {
         "title": "职位名称",
         "company": "公司",
-        "start": "开始日期（例如：2023年1月）",
+        "start": "开始日期（例如 2023年1月）",
         "end": "结束日期（或留空）",
-        "icon": "输入图标名称（例如：FaBriefcase）",
+        "icon": "输入图标名称（例如 FaBriefcase）",
         "description": "描述"
+      },
+      "errors": {
+        "title": "必须填写标题",
+        "company": "必须填写公司",
+        "description": "必须填写描述",
+        "startDate": "必须填写开始日期"
       }
     },
     "hero": {
       "loading": "加载中...",
-      "error": "❌ 加载 hero 数据失败",
-      "add": "➕ 添加 Hero",
-      "edit": "✏️ 编辑 Hero",
-      "editTitle": "✏️ 编辑 Hero 区域",
-      "newTitle": "➕ 创建 Hero 区域",
-      "name": "姓名",
+      "error": "❌ 无法加载主页数据",
+      "add": "➕ 添加主页",
+      "edit": "✏️ 编辑主页",
+      "editTitle": "✏️ 编辑主页部分",
+      "newTitle": "➕ 创建主页部分",
+      "name": "名称",
       "tagline": "标语",
-      "technologies": "技术（逗号分隔）",
-      "confirmDelete": "⚠️ 确定删除此 Hero？",
-      "delete": "🗑️ 删除 Hero",
+      "technologies": "技术（以逗号分隔）",
+      "errors": {
+        "name": "必须填写名称",
+        "tagline": "必须填写标语",
+        "technologies": "必须填写技术"
+      },
+      "confirmDelete": "⚠️ 删除此主页？",
+      "delete": "🗑️ 删除主页",
       "toast": {
-        "created": "✅ Hero 创建成功",
+        "created": "✅ 主页已创建",
         "createError": "❌ 创建失败",
-        "updated": "✅ Hero 更新成功",
+        "updated": "✅ 主页已更新",
         "updateError": "❌ 更新失败",
-        "deleted": "🗑️ Hero 已删除",
+        "deleted": "🗑️ 主页已删除",
         "deleteError": "❌ 删除失败"
       }
     },
     "messages": {
       "title": "📨 联系消息",
       "loading": "加载中...",
-      "error": "❌ 加载消息失败",
-      "noMessages": "还没有收到任何消息。",
+      "error": "❌ 无法加载消息",
+      "noMessages": "尚未收到消息。",
       "confirmDelete": "❌ 删除此消息？"
     },
     "contact": {
-      "loading": "⏳ 正在加载联系信息...",
-      "notFound": "⚠️ 未找到联系信息。你可以在下方添加：",
+      "loading": "⏳ 加载联系信息中...",
+      "notFound": "⚠️ 未找到联系信息。您可以在下方添加：",
       "add": "➕ 添加联系信息",
       "title": "📇 编辑联系信息",
       "placeholders": {
-        "phone": "输入电话号码",
-        "email": "输入电子邮箱地址",
-        "location": "输入所在位置",
-        "github": "https://github.com/你的用户名",
-        "telegram": "https://t.me/你的用户名",
-        "linkedin": "https://linkedin.com/in/你的用户名"
+        "phone": "输入您的电话号码",
+        "email": "输入您的电子邮件地址",
+        "location": "输入您的位置",
+        "github": "https://github.com/您的用户名",
+        "telegram": "https://t.me/您的用户名",
+        "linkedin": "https://linkedin.com/in/您的用户名"
+      },
+      "errors": {
+        "phone": "必须填写电话",
+        "invalidEmail": "无效的电子邮件",
+        "email": "必须填写电子邮件",
+        "location": "必须填写位置",
+        "githubUrl": "无效的 GitHub URL",
+        "github": "必须填写 GitHub",
+        "telegramUrl": "无效的 Telegram URL",
+        "telegram": "必须填写 Telegram",
+        "linkedinUrl": "无效的 LinkedIn URL",
+        "linkedin": "必须填写 LinkedIn"
       },
       "reset": "🧹 重置为上次保存",
-      "confirmDelete": "确定要删除联系信息？",
+      "confirmDelete": "您确定要删除联系信息吗？",
       "toast": {
         "created": "✅ 联系信息已创建",
-        "createError": "❌ 创建失败",
+        "createError": "❌ 创建联系信息失败",
         "updated": "✅ 联系信息已更新",
-        "updateError": "❌ 更新失败",
+        "updateError": "❌ 更新联系信息失败",
         "deleted": "🗑️ 联系信息已删除",
-        "deleteError": "❌ 删除失败",
-        "noValid": "❌ 无法更新：未找到有效信息"
+        "deleteError": "❌ 删除联系信息失败",
+        "noValid": "❌ 无法更新：未找到有效的联系信息"
       }
     }
   },
   "protected": {
-    "checking": "正在检查访问权限..."
+    "checking": "检查访问权限..."
+  },
+  "iconPicker": {
+    "placeholder": "输入图标名称（例如 FaNodeJs）",
+    "noMatches": "未找到匹配项"
   },
   "languages": {
     "en": "英语",
